# Cardano-Simple-Marketplace

./: .gitignore  README.md  SUMMARY.md  package-lock.json
.github/workflows/: cd.yml  ci.yml
docs/: installation.md  onchain.md  usage.md
off-chain/: .env  Dockerfile  jest.config.api.js  package-lock.json  package.json  schema.graphql  smart-db.tgz  tailwind.config.js
off-chain/__tests__/api/: baseTestCases.js  main.test.ts  testCases-Others.js  testCases-POST-Create-Entity.js  testCases-POST-Entity-ByParams.js  testCases-POST-Entity-Count.js  testCases-POST-Entity-Exists.js  testCases-POST-Update-Entity.js  testResults.csv  testResults.xlsx
off-chain/__tests__/concurrency/: results.ts
off-chain/_smart-contracts/: policyID.plutus  validator.plutus
off-chain/coverage/: index.html
off-chain/coverage/lib/SmartDB/: backEnd.ts.html  index.html
off-chain/coverage/pages/api/: [[...query]].ts.html  index.html
off-chain/public/: swagger.json
off-chain/src/lib/SmartDB/: backEnd.ts
off-chain/src/pages/: _app.tsx  index.tsx
off-chain/src/pages/api/: [[...query]].ts
off-chain/styles/: _mixins.scss  global.scss  shared.module.scss
on-chain/: README.md  cabal.project  hie.yaml
on-chain/Helpers/src/Helpers/: CLI.hs  Constants.hs  Deploy.hs  OffChain.hs  OffChainEval.hs  OnChain.hs  Types.hs
on-chain/Market/: Market.hs  MarketValidator.cabal
on-chain/Market/app/: deploy.hs
on-chain/Market/scripts/: cli.sh  utils-transactions.sh
on-chain/Market/src/: Deploy.hs  Types.hs
on-chain/Market/src/Policys/: PolicyID.hs  PolicyNFT.hs
on-chain/Market/src/Validators/: MarketValidator.hs
on-chain/Market/test/: MarketValidatorTest.hs
on-chain/Policies/RedeemerNFT/src/: RedeemerNftPolicy.hs
on-chain/Validators/Market/: MarketValidator.cabal
on-chain/Validators/Market/app/: deploy.hs
on-chain/Validators/Market/src/: MarketValidator.hs
onchain/: cabal.project
(+84 files in other folders)
