cabal-version: 3.4
name:          MarketValidator
version:       0.1.0.0
author:        Francisco Ciordia Cantarella
maintainer:    francisco.ciordia.cantarella@gmail.com
build-type:    Simple
copyright:     © 2024 Francisco Ciordia Cantarella 
license:       Apache-2.0

common common-all
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , containers
    , data-default
    , plutonomy
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , text

  build-depends:    cardano-helpers
  default-language: Haskell2010
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -fexpose-all-unfoldings -fplugin-opt
    PlutusTx.Plugin:defer-errors

common common-all-tests
  import:        common-all
  build-depends:
    , plutus-ledger
    , plutus-simple-model
    , QuickCheck
    , tasty
    , tasty-hunit

library
  import:          common-all
  hs-source-dirs:  src
  exposed-modules:  Validators.MarketValidator,
                    Policys.PolicyID,
                    Policys.PolicyNFT,
                    Deploy,
                    Types,
  build-depends:
    ,directory
    , filepath
    , openapi3
    , playground-common
    , time 
    , plutus-ledger
    , process

test-suite MarketValidatorTest
  import:         common-all-tests
  type:           exitcode-stdio-1.0
  main-is:        MarketValidatorTest.hs
  hs-source-dirs: test
  build-depends:  MarketValidator

executable MarketValidatorDeploy
  import:         common-all
  main-is:        deploy.hs
  hs-source-dirs: app
  build-depends:  MarketValidator
    , directory
    , filepath
    , openapi3
    , playground-common
    , plutus-ledger
    , process
    , time
